# sibyl

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  sibyl.yaml.example
reports/: sibyl_AI industry landscape 2026  major players market s_20260412_221141.md  sibyl_Canadian housing market 2026 outlook  price trends_20260412_220249.md  sibyl_Canadian housing market 2026_20260412_210712.md
sibyl/: __init__.py  analyzer.py  cli.py  config.py  data.py  mcp_server.py  reporter.py  researcher.py  scraper.py  search.py  tools.py
